fix: card-select item spacing fix

--- a/src/assets/styles/components/_card-select.scss
+++ b/src/assets/styles/components/_card-select.scss
@@ -82,7 +82,7 @@
 }
 
 .card-select-group {
-  --ds-card-select-group-space: var(--ds-space-20);
+  --ds-card-select-group-space: var(--ds-space-16);
 
   &__item {
     margin-bottom: var(--ds-card-select-group-space);
